--- a/src/main/webapp/tds/web-app/css/shared/components/combo-box-group.scss
+++ b/src/main/webapp/tds/web-app/css/shared/components/combo-box-group.scss
@@ -1,6 +1,4 @@
 .combo-group {
-//   display: flex;
-
   .k-widget {
     &.k-combobox {
       width: 220px;
@@ -13,6 +11,13 @@
       color: black;
       border-bottom: 1px solid #999;
 
+      .k-input {
+        padding: 0 0.25rem;
+        height: 1rem;
+        max-height: 1rem;
+        font-size: 0.541667rem;
+      }
+
       &.k-state-focused {
         -webkit-box-shadow: unset;
         box-shadow: unset;
@@ -22,7 +27,7 @@
 
       .k-i-close::before,
       .k-i-group-delete::before {
-		margin-right: -30px;
+        margin-right: -30px;
       }
     }
 
